# CSFrag

./: .gitignore  Bug.hs  CheckSeq.hs  Database.hs  DatabaseCreation.hs  DatabaseSearch.hs  K18_alone_shifty.csv  MakeDB.hs  MakeDBMR.hs  Makefile  Outer.hs  RepaBin.hs  RepaBinary.hs  ResidueCodes.hs  SearchDB.hs  SeqSim.hs  ShiftsCSVInput.hs  TODO.txt  Test.hs  Test2.hs  Test3.hs  TestOuter.hs  Util.hs  Utils.hs  config  cs-frag.cabal  minitest.sh  smallest_gap.str  testit.sh  ubq.csv  ubq.str  ubqStart_HA.csv
Data/Array/Repa/: RepaBinary.hs  RepaNFData.hs
again/: run_ch.sh
data/: seqsim.txt
doc/: clone.bib  links.txt  preditor.txt
master/: config
share/: seqsim.txt
slave/: config
ubqs/: merged_15866_2k6d.str
