name:                CSFrag
version:             0.1
synopsis:            Chemical shift-based fragment finding.
description:         Creates CS-indexed database, and uses Preditor criterion to find best fragments. 
category:            Data
license:             BSD3
--license-file:        LICENSE
author:              Michal J. Gajda
maintainer:          mgajda@gwdg.de
build-type:          Simple
cabal-version:       >=1.12

flag old-vector
  description: Use old vector library before version 0.10 (introduced along with GHC 7.6).
               Disable for GHC 7.6.1 and latest 7.4.2.
  default: True

executable  MakeDB
  default-language:    Haskell2010
  main-is:             MakeDB.hs
  other-modules:       Database ResidueCodes Util Data.Array.Repa.RepaBinary Data.Array.Repa.RepaNFData
  ghc-options:         -threaded -with-rtsopts=-H3G -rtsopts
  build-depends:       base, binary, derive, parsestar, repa < 3.2.2, filepath, vector, containers, bytestring, array, zlib, attoparsec-csv, attoparsec, text, deepseq, parallel-io
  if flag(old-vector)
    cpp-options: -DDEFINE_NFDATA_VECTOR
    build-depends: vector < 0.10.0.0
  else
    build-depends: vector >= 0.10.0.0

executable  SearchDB
  default-language:    Haskell2010
  main-is:             SearchDB.hs
  other-modules:       Database ResidueCodes Util Data.Array.Repa.RepaBinary ShiftsCSVInput DatabaseSearch
  ghc-options:         -threaded -with-rtsopts=-H3G -rtsopts
  build-depends:       base, binary, derive, parsestar, repa < 3.2.2, filepath, vector, containers, bytestring, array, zlib, attoparsec-csv, attoparsec, text, deepseq, QuickCheck < 2.5.0.0, parallel-io
  if flag(old-vector)
    cpp-options: -DDEFINE_NFDATA_VECTOR
    build-depends: vector < 0.10
  else
    build-depends: vector >= 0.10.0.0
--Add: pqueue
executable  MakeDBMR
  default-language:    Haskell2010
  main-is:             MakeDBMR.hs
  other-modules:       Database ResidueCodes Util Data.Array.Repa.RepaBinary Data.Array.Repa.RepaNFData
  build-depends:       base, binary, derive, parsestar, repa < 3.2.2, filepath, vector, containers, bytestring, array, zlib, attoparsec-csv, attoparsec, text, deepseq, QuickCheck < 2.5.0.0, parallel-io, remote, transformers
  ghc-options:         -threaded -with-rtsopts=-H3G -rtsopts
  if flag(old-vector)
    cpp-options: -DDEFINE_NFDATA_VECTOR
    build-depends: vector < 0.10
  else
    build-depends: vector >= 0.10.0.0

executable  CheckSeq
  default-language:    Haskell2010
  main-is:             CheckSeq.hs
  other-modules:       Database ResidueCodes Util Data.Array.Repa.RepaBinary ShiftsCSVInput
  ghc-options:         -threaded -with-rtsopts=-H3G -rtsopts
  build-depends:       base, binary, derive, parsestar, repa < 3.2.2, filepath, vector, containers, bytestring, array, zlib, attoparsec-csv, attoparsec, text, deepseq, QuickCheck < 2.5.0.0
  if flag(old-vector)
    cpp-options: -DDEFINE_NFDATA_VECTOR
    build-depends: vector < 0.10
  else
    build-depends: vector >= 0.10.0.0

Test-Suite TestOuter
  type:       exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             TestOuter.hs
  other-modules:       Outer
  ghc-options:         -threaded -with-rtsopts=-H3G -rtsopts
  build-depends:       base, binary, derive, parsestar, repa < 3.2.2, filepath, vector, containers, bytestring, array, zlib, attoparsec-csv, attoparsec, text, deepseq, QuickCheck < 2.5.0.0
  if flag(old-vector)
    cpp-options: -DDEFINE_NFDATA_VECTOR
    build-depends: vector < 0.10
  else
    build-depends: vector >= 0.10.0.0

Test-Suite Bug
  type:       exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Bug.hs
  other-modules:       Outer
  ghc-options:         -threaded -with-rtsopts=-H3G -rtsopts
  build-depends:       base, binary, derive, parsestar, repa < 3.2.2, filepath, vector, containers, bytestring, array, zlib, attoparsec-csv, attoparsec, text, deepseq, QuickCheck < 2.5.0.0, parallel-io
  if flag(old-vector)
    cpp-options: -DDEFINE_NFDATA_VECTOR
    build-depends: vector < 0.10
  else
    build-depends: vector >= 0.10.0.0
